# flowfs

./: LICENSE  README.md
backend/: Cargo.toml  flowfs.toml
backend/src/: lesson.rs  main.rs  utils.rs
backend/src/handler/: cell.rs  dir.rs  fileprop.rs  mod.rs  user.rs
backend/src/model/: mod.rs  request.rs  response.rs
local_app/: Cargo.toml  Dioxus.toml  flowfs.db  flowfs.toml  package-lock.json  tailwind.config.js  tailwind.css  temp.html  temp.rsx
local_app/dioxus/: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.css  temp1.html  temp1.rs
local_app/dioxus/src/: main.rs  svg_icon.rs  tree.rs
local_app/flowfs-client/: package-lock.json  package.json
local_app/flowfs-client/src/: Cell.tsx  Cells.tsx  Dashboard.tsx  MessageGrid.tsx  SlackMessage.tsx  bindings.ts  main.tsx
local_app/flowfs-client/src-tauri/: Cargo.toml  tauri.conf.json
local_app/flowfs-client/src-tauri/src/: main.rs
local_app/flowfs-client/src-tauri/src/model/: mod.rs  request.rs  response.rs
local_app/flowfs-frontend/: Cargo.toml
local_app/flowfs-frontend/src-tauri/: Cargo.toml  tauri.conf.json
local_app/flowfs-vue/: package-lock.json  package.json
local_app/flowfs-vue/src/: App.vue  constants.ts  main.ts  svg-loader.ts  vite-env.d.ts
local_app/flowfs-vue/src-tauri/: Cargo.toml  tauri.conf.json
local_app/flowfs-vue/src/api/: c2s.ts  common.ts  contracts.ts  emojis.ts  instance.ts  markers.ts  notifications.ts  posts.ts  relationships.ts  search.ts  settings.ts  subscriptions-common.ts  subscriptions-ethereum.ts  subscriptions-monero.ts  users.ts
local_app/flowfs-vue/src/assets/cryptoicons/: README.md
local_app/flowfs-vue/src/assets/extra-icons/: README.md
local_app/flowfs-vue/src/assets/feather/: README.md
local_app/flowfs-vue/src/assets/forkawesome/: README.md
local_app/flowfs-vue/src/assets/tabler/: README.md
local_app/flowfs-vue/src/components/: Avatar.vue  CryptoAddress.vue  CryptoIcon.vue  EmojiPicker.vue  InstanceInfo.vue  Loader.vue  Post.vue  PostAttachment.vue  PostContent.vue  PostEditor.vue  PostEditorAttachment.vue  PostList.vue  PostOrRepost.vue  PostPreview.vue  ProfileCard.vue  ProfileDisplayName.vue  ProfileListItem.vue  QrCode.vue  Search.vue  Sidebar.vue  SidebarLayout.vue  StaticPage.vue  SubscriptionEthereum.vue  SubscriptionMonero.vue  SubscriptionSettingsEthereum.vue  SubscriptionSettingsMonero.vue  UniversalLink.vue  VisibilityIcon.vue
local_app/flowfs-vue/src/composables/: client-config.ts  ethereum-address-verification.ts  handle.ts  instance.ts  notifications.ts  signed-activity.ts  subscribe.ts  theme.ts  user.ts  wallet.ts
local_app/flowfs-vue/src/router/: index.ts
local_app/flowfs-vue/src/styles/: _layout.scss  _mixins.scss  _reset.scss  _theme.scss
local_app/flowfs-vue/src/utils/: autoresize.ts  cryptocurrencies.ts  dates.ts  debounce.ts  did.ts  encodings.ts  ethereum.ts  greentext.ts  monero.ts  numbers.ts  upload.ts
local_app/flowfs-vue/src/views/: About.vue  Ethereum.vue  FollowRequestList.vue  Gallery.vue  HomeTimeline.vue  IdentityProof.vue  ImportFollowers.vue  ImportFollows.vue  LandingPage.vue  NotificationList.vue  PostDetail.vue  Profile.vue  ProfileAliases.vue  ProfileDirectory.vue  ProfileForm.vue  PublicTimeline.vue  SearchResultList.vue  Settings.vue  Subscriber.vue  SubscriptionPage.vue  SubscriptionsSettings.vue  TagTimeline.vue
local_app/src/: __model.rs  main.rs  svg_icon.rs  tree.rs  utils.rs
local_app/src/handler/: cell.rs  file_explorer.rs  fileprop.rs  mod.rs  user.rs
local_app/src/model/: mod.rs  request.rs  response.rs
