[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.3", features = ["full"]}
# tokio = { version = "1.37", features = ["macros", "rt-multi-thread"]}
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
mongodb = { version = "2.8", features = ["tokio-runtime"]}
uuid = { version = "1.8", features = ["serde"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.0", features = ["chrono-0_4"] }