[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
env_logger = "*"
tokio = { version = "1.3", features = ["full"]}
axum = { version = "*", features = ["macros"] }
# tokio-tungstenite = "0.21"
futures-util = "0.3"
# futures-channel = "0.3"
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
mongodb = { version = "2.8", features = ["tokio-runtime"]}
toml = "0.8"
anyhow = "1"
# uuid = "*"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }