[package]
name = "flowfs-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
tokio = { version = "1.3", features = ["full"]}
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
mongodb = { version = "2.8", features = ["tokio-runtime"]}
toml = "0.8"
url = "*"
mac_address = "*"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
